# memory_clear_win

./: Cargo.toml  README.md  build.rs
.github/workflows/: cargo-check-updates.yml  run.yml
src/: main.rs
