[package]
name = "de_memory"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
] }
sysinfo = "0.35.2" # CPU监控
