[package]
name = "de_memory"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = ["Win32","Win32_Foundation",
"Win32_System",
"Win32_System_Diagnostics",
"Win32_System_Performance",
"Win32_NetworkManagement",
"Win32_NetworkManagement_QoS",
"Win32_Networking",
"std",
 "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_SystemServices"] }
